Fixed issues with alignment between button groups and their associated labels

--- a/src/components/Trends/TrendsPanel/TrendsPanel.scss
+++ b/src/components/Trends/TrendsPanel/TrendsPanel.scss
@@ -7,7 +7,6 @@
     }
     .separator {
       display: inline-block;
-      margin-right: 10px;
     }
   }
 
